--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "recoil": "0.0.10",
     "typescript": "^3.9.5"
   },
   "scripts": {
